# godmode-pi

./: .gitignore  AGENTS.md  APPEND_SYSTEM.md  Modelfile-godmode  README.md  RULES.md  config.yml  main.py  pyproject.toml
.github/workflows/: validate.yml
plans/: 001-remove-python-scaffold.md  002-add-ci-validation.md  003-add-config-validation.md  004-add-install-script.md  005-clean-opencode-config.md  006-add-agents-dot-md.md  007-build-cli-tool.md  007-cli-report.md  008-add-regression-testing.md  008-test-report.md  README.md
scripts/: install.sh  validate.sh
src/godmode_pi/: CLI.md  __init__.py  cli.py  install.py  validate.py
tests/: expected_behavior.md  run.sh  test_install.py  test_prompts.txt  test_validate.py
