[project]
name = "godmode-pi"
version = "0.1.0"
description = "CLI tool for validating and installing godmode-pi jailbreak configs"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
godmode-pi = "godmode_pi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
